--- a/README.org
+++ b/README.org
@@ -168,8 +168,8 @@ header on the right).
 
 ** Development
 
-organice is built with React and Redux. It was bootstrapped with
-[[https://github.com/facebook/create-react-app][Create React App]].
+organice is built with [[https://reactjs.org/][React]] and [[https://redux.js.org/][Redux]]. It was bootstrapped with
+[[https://github.com/facebook/create-react-app][Create React App]]. The tests are written with [[https://testing-library.com/docs/react-testing-library/intro][React Testing Library]].
 
 *** Setup
 
@@ -191,56 +191,6 @@ To run the app, run:
 #+BEGIN_SRC shell
 yarn start
 #+END_SRC
-
-*** Synchronization back-ends
-
-Note that logging in to Dropbox will only work if you're running the
-app on ~http://localhost:3000~, because all redirect URIs must be
-specified ahead of time on the Dropbox developer console.
-
-To configure your own application on Dropbox, please go [[https://www.dropbox.com/developers/apps/][here]] and then
-configure this app key in the ~.env~ file. Make sure to add your own
-URL as =Redirect URI=.
-
-To configure your own application on Google Drive, please generate an
-API key as described on [[https://developers.google.com/drive/api/v3/quickstart/js][this page]].
-
-**** WebDAV
-
-***** General
-
-With WebDAV support, organice can potentially be used with a multitude
-of synchronization backends: Client/Server services [[https://doc.owncloud.com/server/user_manual/files/access_webdav.html][ownCloud]],
-[[https://docs.nextcloud.com/server/stable/user_manual/files/access_webdav.html?highlight=webdav][Nextcloud]] and [[https://download.seafile.com/published/seafile-manual/extension/webdav.md][Seafile]], but also self hosted dedicated WebDAV servers
-like [[https://httpd.apache.org/docs/2.4/mod/mod_dav.html][Apache]] or [[https://nginx.org/en/docs/http/ngx_http_dav_module.html][Nginx]].
-
-Since organice is a front-end application, it will login with
-JavaScript from within the browser - in turn the [[https://developer.mozilla.org/en-US/docs/Web/HTTP/CORS][Cross-Origin Resource
-Sharing (CORS)]] headers must be set appropriately. If they are not set,
-you will not be able to login to your service from a browser.
-Alternatively, if you're using a server like Apache or Nginx, you can
-simply get around CORS by hosting organice on the same domain as your
-service.
-
-Please note, that when your back-end does not set the correct CORS
-headers, organice cannot show you a really semantic error message on
-that. The reason is that browsers [[https://www.w3.org/TR/cors/#handling-a-response-to-a-cross-origin-request][hide this information]] from
-JavaScript. You will simply get a network error. However, you can
-easily debug it yourself by looking into the JavaScript console. No
-worries, you don't have to be a (JavaScript) developer to find out
-about that - here's a [[https://github.com/200ok-ch/organice/wiki#missing-cors-headers][screencast in the Wiki]] to show you how to do it.
-
-***** More information
-
-In the [[https://github.com/200ok-ch/organice/wiki#webdav][Wiki]], you'll find lots more information regarding WebDAV:
-
-  - A screencast of how organice works when logging in to a WebDAV
-    server
-  - Documentation how on to setup your own WebDAV Server with Apache2
-    on Debian
-  - Documentation how to configure Nextcloud behind haproxy to allow
-    WebDAV
-  - Documentation on Nextcloud sharing
 
 *** Contributions
 
@@ -320,6 +270,56 @@ heroku create
 heroku config:set ON_HEROKU=1
 git push heroku master
 #+END_SRC
+
+*** Synchronization back-ends
+
+Note that logging in to Dropbox will only work if you're running the
+app on ~http://localhost:3000~, because all redirect URIs must be
+specified ahead of time on the Dropbox developer console.
+
+To configure your own application on Dropbox, please go [[https://www.dropbox.com/developers/apps/][here]] and then
+configure this app key in the ~.env~ file. Make sure to add your own
+URL as =Redirect URI=.
+
+To configure your own application on Google Drive, please generate an
+API key as described on [[https://developers.google.com/drive/api/v3/quickstart/js][this page]].
+
+**** WebDAV
+
+***** General
+
+With WebDAV support, organice can potentially be used with a multitude
+of synchronization backends: Client/Server services [[https://doc.owncloud.com/server/user_manual/files/access_webdav.html][ownCloud]],
+[[https://docs.nextcloud.com/server/stable/user_manual/files/access_webdav.html?highlight=webdav][Nextcloud]] and [[https://download.seafile.com/published/seafile-manual/extension/webdav.md][Seafile]], but also self hosted dedicated WebDAV servers
+like [[https://httpd.apache.org/docs/2.4/mod/mod_dav.html][Apache]] or [[https://nginx.org/en/docs/http/ngx_http_dav_module.html][Nginx]].
+
+Since organice is a front-end application, it will login with
+JavaScript from within the browser - in turn the [[https://developer.mozilla.org/en-US/docs/Web/HTTP/CORS][Cross-Origin Resource
+Sharing (CORS)]] headers must be set appropriately. If they are not set,
+you will not be able to login to your service from a browser.
+Alternatively, if you're using a server like Apache or Nginx, you can
+simply get around CORS by hosting organice on the same domain as your
+service.
+
+Please note, that when your back-end does not set the correct CORS
+headers, organice cannot show you a really semantic error message on
+that. The reason is that browsers [[https://www.w3.org/TR/cors/#handling-a-response-to-a-cross-origin-request][hide this information]] from
+JavaScript. You will simply get a network error. However, you can
+easily debug it yourself by looking into the JavaScript console. No
+worries, you don't have to be a (JavaScript) developer to find out
+about that - here's a [[https://github.com/200ok-ch/organice/wiki#missing-cors-headers][screencast in the Wiki]] to show you how to do it.
+
+***** More information
+
+In the [[https://github.com/200ok-ch/organice/wiki#webdav][Wiki]], you'll find lots more information regarding WebDAV:
+
+  - A screencast of how organice works when logging in to a WebDAV
+    server
+  - Documentation how on to setup your own WebDAV Server with Apache2
+    on Debian
+  - Documentation how to configure Nextcloud behind haproxy to allow
+    WebDAV
+  - Documentation on Nextcloud sharing
 
 *** Routing
 
