Fix typo in doc

--- a/README.org
+++ b/README.org
@@ -200,7 +200,7 @@ Running the tests:
 yarn test
 #+END_SRC
 
-For the searching the Org file, there's a [[file:src/lib/headline_filter_parser.grammar.pegjs][grammar]] for the search
+For searching the Org file, there's a [[file:src/lib/headline_filter_parser.grammar.pegjs][grammar]] for the search
 clause. It's written in [[https://pegjs.org/][pegjs]]. Generating the parser code happens
 automatically on =yarn start|build|test=. When working on the parser,
 you can manually generate it with:
