--- a/README.org
+++ b/README.org
@@ -54,6 +54,7 @@ restrictions and expectations.
   in-buffer configuration]])
   - Other in-buffer settings are imported and re-exported but are not
     editable with organice.
+  - In-buffer settings have to be declared before the first headline.
 - Other content before the first headline is imported and re-exported,
   but invisible and currently not editable with organice.
 - After potential in-buffer settings, your Org file _has to_ begin
