--- a/changelog.org
+++ b/changelog.org
@@ -7,6 +7,8 @@ All notable changes to this project will be documented in this file.
 *** Added
     - Support single- and double-quoted strings in the search filter
       - Thank you [[https://github.com/schoettl][@schoettl]] for the [[https://github.com/200ok-ch/organice/pull/176][PR]] 🙏
+    - Trim whitespace for entered or updated headlines
+      - Thank you [[https://github.com/schoettl][@schoettl]] for the [[https://github.com/200ok-ch/organice/pull/177][PR]] 🙏
 
 ** <2019-12-31 Tue>
 
