--- a/changelog.org
+++ b/changelog.org
@@ -13,6 +13,10 @@ All notable changes to this project will be documented in this file.
     - Highlight cookies and cookie percentages according to Solarized
       color scheme
 
+
+*** Fixed
+    - Don't update search results when using an invalid search filter
+
 ** <2020-01-01 Wed>
 
 *** Added
