--- a/sample.org
+++ b/sample.org
@@ -7,6 +7,21 @@ This header has some description text and a couple subheaders. Look through the 
 ** This is a subheader
 ** This is a subheader too!
 * Actions
+** Editing headers
+When you select a header the "header action drawer" appears. The first two icons in this drawer edit the header and description respectively. Try editing this header.
+** All icons in the header action bar
+
+1. Pen: Edit header title
+2. Pen in square: Edit header description
+3. Tags: [[https://orgmode.org/manual/Tags.html][Modify tags]]
+4. Expand: [[https://orgmode.org/manual/Structure-editing.html][Narrow to subtree]] (Focus on this header)
+5. Plus: Create new header below
+6. Mail: Share this header via email
+7. Calendar 1: [[https://orgmode.org/manual/Deadlines-and-scheduling.html][Set deadline datetime]]
+8. Calendar 2: [[https://orgmode.org/manual/Deadlines-and-scheduling.html][Set scheduled datetime]]
+9. Hourglass: [[https://orgmode.org/manual/Clocking-commands.html][Clock in and out (Start and stop the clock)]]
+10. File Export: [[https://orgmode.org/manual/Refile-and-copy.html][Refile this header to another header]]
+
 ** Todos [1/4] [25%]
 This header has a few TODO items as subheaders.
 *** TODO Learn how to use TODOs in organice
@@ -21,8 +36,6 @@ organice also supports [[http://orgmode.org/manual/Workflow-states.html#Workflow
 Note that when the cycle restarts, it defaults to the first set of todo states. Manually edit the header to get back to a different todo state cycle (more on editing headers below!)
 *** FINISHED See that custom TODO states are colored correctly
 Custom =org-todo-keywords= keyword sequences can have finish states. They are colored appropriately. You can see that TODO and START headlines are colored red whereas DONE and FINISHED headlines are colored green.
-** Editing headers
-When you select a header the "header action drawer" appears. The first two buttons in this drawer edit the header and description respectively. Try editing this header.
 ** Tags
 The next button in the header action drawer will bring up the tag editor.
 
