--- a/sample.org
+++ b/sample.org
@@ -14,13 +14,14 @@ When you select a header the "header action drawer" appears. The first two icons
 1. Pen: Edit header title
 2. Pen in square: Edit header description
 3. Tags: [[https://orgmode.org/manual/Tags.html][Modify tags]]
-4. Expand: [[https://orgmode.org/manual/Structure-editing.html][Narrow to subtree]] (Focus on this header)
-5. Plus: Create new header below
-6. Mail: Share this header via email
-7. Calendar 1: [[https://orgmode.org/manual/Deadlines-and-scheduling.html][Set deadline datetime]]
-8. Calendar 2: [[https://orgmode.org/manual/Deadlines-and-scheduling.html][Set scheduled datetime]]
-9. Hourglass: [[https://orgmode.org/manual/Clocking-commands.html][Clock in and out (Start and stop the clock)]]
-10. File Export: [[https://orgmode.org/manual/Refile-and-copy.html][Refile this header to another header]]
+4. Properties: [[https://orgmode.org/manual/Properties-and-columns.html][Modify properties]]
+5. Expand: [[https://orgmode.org/manual/Structure-editing.html][Narrow to subtree]] (Focus on this header)
+6. Plus: Create new header below
+7. Mail: Share this header via email
+8. Calendar 1: [[https://orgmode.org/manual/Deadlines-and-scheduling.html][Set deadline datetime]]
+9. Calendar 2: [[https://orgmode.org/manual/Deadlines-and-scheduling.html][Set scheduled datetime]]
+10. Hourglass: [[https://orgmode.org/manual/Clocking-commands.html][Clock in and out (Start and stop the clock)]]
+11. File Export: [[https://orgmode.org/manual/Refile-and-copy.html][Refile this header to another header]]
 
 ** Todos [1/4] [25%]
 This header has a few TODO items as subheaders.
