--- a/changelog.org
+++ b/changelog.org
@@ -2,6 +2,10 @@
 
 All notable changes to this project will be documented in this file.
 
+** <2020-01-12 Sun>
+
+*** Fixed
+    - After undo/redo, synchronize Org file
 
 ** <2020-01-11 Sat>
 
